modified ffa to new system